# TypedefToTypeAlias

./: CMakeLists.txt  README.md  TODOS.txt  main.cpp
CastModernizer/: README.md
DoxygenTemplateGenerator/: README.md  main.cpp
TypedefToTypeAlias/: CMakeLists.txt  README.md  main.cpp  test.py
TypedefToTypeAlias/inputs/: basic.cpp
inputs/: input.cpp  qualified.cpp
